samples/_failures_safe/1761425513_865b67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a3ee6b4.c: In function ‘main’:
./samples/SAFE/__tmp_9a3ee6b4.c:146:9: error: expected expression at end of input
  146 |         } else
      |         ^
./samples/SAFE/__tmp_9a3ee6b4.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a3ee6b4.c:146:9: error: expected declaration or statement at end of input
